Ignored the types-gtanetwork folder. (It gets redownloaded while restoring NuGET package.)

--- a/.gitignore
+++ b/.gitignore
@@ -285,3 +285,6 @@ __pycache__/
 *.btm.cs
 *.odx.cs
 *.xsd.cs
+
+#Ignore the types-gtanetwork folder. (It gets redownloaded once the NuGET package is restored.)
+types-gtanetwork/
